[project]
name = "hf_mirror_downloader"
version = "0.4.0"
description = "Use HF mirror to download and process everything, same with hf commands."
authors = [{ name = "B K" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "transformers"
]

[project.scripts]
hf-mirror-download = "hf_mirror_downloader.cli:download_console"
hf-download = "hf_mirror_downloader.cli:download_console"
hfd = "hf_mirror_downloader.cli:download_console"
hfm = "hf_mirror_downloader.cli:hfm_console"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hf_mirror_downloader"]